etg_derive/tests/cases/04_fail_on_tuple_variant.stderr
error: expected unit variant
 --> tests/cases/04_fail_on_tuple_variant.rs:6:5
  |
6 |     B(u32),
  |     ^
