etg_derive/tests/cases/04_fail_on_tuple_variant.rs
#[derive(etg_derive::Tags)]
enum E {
    #[serde(rename = "a")]
    A,
    #[serde(rename = "b")]
    B(u32),
}

fn main() {}
